update module auth/login

--- a/application/config/app.cfg
+++ b/application/config/app.cfg
@@ -12,5 +12,6 @@
 "account_number" : "2003219197",
 "branch" : "อโศก",
 "theme_frontend" : "scrolling",
-"theme_backend" : "sb-admin"
+"theme_backend" : "sb-admin",
+"description" : "โปรแกรมงานสารบรรณ ออนไลน์ ศูนย์ฝึกทางยุทธวิธีกองทัพบก , ศฝยว.ทบ., ลพบุรี, ThaiArmy, ทหารลพบุรี, ทหารสารบรรณ, คอสารบรรณ"
 }
